Assesment02/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assessment-svc
  namespace: assessment
  labels:
    app: assessment-app
spec:
  selector:
    app: assessment-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
